# Navy

./: .gitignore  CMakeLists.txt  README.md  ports.txt  project.pros
include/: intake.h  lift.hpp  main.h  mogo.hpp  tilter.hpp
include/EZ-Template/: auton_drive_functions.hpp  setup.hpp  util.hpp
src/: intake.cpp  lift.cpp  main.cpp  mogo.cpp  tilter.cpp
src/EZ-Template/: auton_drive_functions.cpp  joystick_control.cpp  util.cpp
